--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Scrape
 
 on:
-  schedule:
-    - cron: "0 8 * * *" # 9 a.m. every day UTC
+  #schedule:
+  #  - cron: "0 8 * * *" # 9 a.m. every day UTC
   workflow_dispatch:
 
 jobs:
